added poly models and changing code to reference models

--- a/index.html
+++ b/index.html
@@ -18,5 +18,9 @@
         }
     </script>
     <script type="module" src="main.js"></script>
+    <script type="module">
+        import { GLTFLoader } from 'https://cdn.jsdelivr.net/npm/three@0.163.0/examples/jsm/loaders/GLTFLoader.js';
+        window.GLTFLoad = GLTFLoader;
+    </script>
 </body>
 </html>
